Swagger filer done + fjern kommentar i server.go
